crates/snapshot-tests/tests/snapshots/parser__bad_underscores__double_leading.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnquotedString]: string values must be quoted, expected string literal at `foo`
  ┌─ double_leading:1:7
  │
1 │ foo = __0
  │       ^^^ string is not quoted


error: string values must be quoted, expected string literal at `foo`
 --> double_leading:1:7
  |
1 | foo = __0
  |       ^^^ string is not quoted
Error {
    kind: "UnquotedString",
    message: "string values must be quoted, expected string literal",
    span: 6..9,
    path: Some(
        "foo",
    ),
}
